Fix horizontal overflow

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -4,7 +4,8 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
-  width: 100%;
+  width: 85%;
+  padding: 1rem;
 }
 
 .hamburger-btn {
@@ -16,6 +17,7 @@ body {
   background-color: #f7f7f9;
   color: #172b4d;
   overflow-x: hidden;
+  margin: 0;
   width: 100%;
 }
 
@@ -158,9 +160,9 @@ body {
 .about-myself {
   margin-top: 150px;
   padding-top: 20px;
+  padding: 1rem;
   background-color: white;
   font-family: 'Poppins', sans-serif;
-  width: 90%;
 }
 
 .myself_title {
